[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/Soldier/Crosshair.gd" type="Script" id=1]
[ext_resource path="res://assets/Sounds/Rocket_Trail.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/Sounds/Jump_2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Sounds/Rocket_Launch_1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Sounds/Step_1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Sounds/Step_3.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/UI/Crosshair_reticle.png" type="Texture" id=7]
[ext_resource path="res://assets/Sounds/Step_2.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/Soldier/Online/Soldier Script(Online).gd" type="Script" id=9]
[ext_resource path="res://assets/Sfx/SpeedRays.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/Soldier/Rocket Launcher.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/Weapons/Shotgun.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Soldier/Soldier Hat.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/Soldier/SoldierSway.tres" type="Animation" id=15]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:transform")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Transform( -0.1, 0, 1.50996e-08, 0, 0.1, 0, -1.50996e-08, 0, -0.1, 1, -0.7, 5.96046e-08 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shoot_Rocket"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -0.122111, -0.25, 0, 0.0899341, -7.25612, -24.0877, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 181.988, -0.25, 0, 0.25, 0, 188.933, -0.0818631, 0.161499, 0.0726397, -0.143303, 180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( -0.2, 0.1, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.5 )
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:transform")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Transform( -0.1, 0, 1.50996e-08, 0, 0.1, 0, -1.50996e-08, 0, -0.1, 1, -0.7, 5.96046e-08 ), Transform( -0.1, 6.84943e-09, -1.34567e-08, 0, 0.0891197, 0.0453617, 1.50996e-08, 0.0453617, -0.0891196, 1, -0.7, 5.96046e-08 ), Transform( -0.1, 0, 1.50996e-08, 0, 0.1, 0, -1.50996e-08, 0, -0.1, 1, -0.7, 5.96046e-08 ) ]
}

[sub_resource type="GDScript" id=7]
script/source = "extends Area


var items = 0

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_Visibility_collision_area_entered(area):
	items += 1
	area.get_parent().visible = true


func _on_Visibility_collision_area_exited(area):
	items -= 1
	if items <= 0:
		area.get_parent().visible = false
"

[sub_resource type="SphereShape" id=5]

[sub_resource type="SphereMesh" id=6]

[node name="Soldier(online)" type="KinematicBody" groups=["Player"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 2
collision_mask = 9
input_ray_pickable = false
script = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
mesh = SubResource( 2 )
material/0 = null

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
transform = Transform( -1, 0, -5.96046e-08, 0, 1, 0, 5.96046e-08, 0, -1, 0, 0, 0 )
cull_mask = 1048569
near = 0.01
far = 80.0

[node name="RayCast" type="RayCast" parent="Pivot/Camera"]
transform = Transform( -1, 0, 5.96046e-08, 0, 1, 0, -5.96046e-08, 0, -1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 10000 )
collide_with_areas = true

[node name="Shotgun" parent="Pivot/Camera" instance=ExtResource( 12 )]
transform = Transform( -1, 0, 5.96046e-08, 0, 1, 0, -5.96046e-08, 0, -1, 0.71345, -0.4348, -0.9946 )
visible = false

[node name="Rocket Launcher" parent="Pivot/Camera" groups=["Player"] instance=ExtResource( 11 )]
transform = Transform( -0.1, 0, -8.74228e-09, 0, 0.1, 0, 8.74228e-09, 0, -0.1, 1, -0.7, 5.96046e-08 )

[node name="MeshInstance" parent="Pivot/Camera/Rocket Launcher" index="0"]
layers = 1

[node name="Smoke3" parent="Pivot/Camera/Rocket Launcher/MeshInstance/Spatial" index="0"]
layers = 1

[node name="Smoke2" parent="Pivot/Camera/Rocket Launcher/MeshInstance/Spatial" index="1"]
layers = 1

[node name="Smoke" parent="Pivot/Camera/Rocket Launcher/MeshInstance/Spatial" index="2"]
layers = 1

[node name="Fire2" parent="Pivot/Camera/Rocket Launcher/MeshInstance/Spatial" index="3"]
layers = 1

[node name="Fire" parent="Pivot/Camera/Rocket Launcher/MeshInstance/Spatial" index="4"]
layers = 1

[node name="Gun0" type="Spatial" parent="Pivot/Camera/Rocket Launcher"]
transform = Transform( 1, 0, 1.27898e-13, 0, 1, 0, -1.27898e-13, 0, 1, 0, 2.96889, 13.2005 )

[node name="SpeedRays" parent="Pivot/Camera" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.5 )
visible = false

[node name="OmniLight" type="OmniLight" parent="Pivot/Camera"]
transform = Transform( -1, 0, 5.96046e-08, 0, 1, 0, -5.96046e-08, 0, -1, 0.42807, -0.2, -1.40703 )
layers = 4
light_energy = 4.31
shadow_enabled = true
shadow_color = Color( 1, 0.698039, 0.458824, 1 )
shadow_bias = -8.621
omni_range = 2.0

[node name="Soldier Hat" parent="." instance=ExtResource( 14 )]
transform = Transform( -0.3, 0, -2.62268e-08, 0, 0.3, 0, 2.62268e-08, 0, -0.3, 0, 0, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ViewportContainer" type="ViewportContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Crosshair" type="TextureRect" parent="CanvasLayer/ViewportContainer"]
margin_left = 625.0
margin_top = 351.0
margin_right = 655.0
margin_bottom = 369.0
rect_pivot_offset = Vector2( 15, 9 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 7 )
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="CanvasLayer/ViewportContainer"]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
hdr = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="CanvasLayer/ViewportContainer/Viewport"]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 1.7, 0 )
visible = false
cull_mask = 4
near = 0.01
far = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Pivot/Camera/Rocket Launcher")
autoplay = "Sway"
anims/RESET = SubResource( 3 )
anims/Shoot_Rocket = SubResource( 4 )
anims/Sway = ExtResource( 15 )
next/RESET = "Sway"
next/Shoot_Rocket = "Sway"
blend_times = [ "Shoot_Rocket", "Sway", 0.5, "Sway", "Sway", 0.5 ]

[node name="Rocket_Cooldown" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Footstep" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4
autostart = true

[node name="Rocket_Launch" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[node name="Jump" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[node name="Footstep1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
bus = "Effects"

[node name="Footstep2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )
bus = "Effects"

[node name="Footstep3" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[node name="land" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )
bus = "Effects"

[node name="Rocket_Trail" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = -9.0
pitch_scale = 0.8
bus = "Effects"
__meta__ = {
"_editor_description_": ""
}

[node name="Visibility collision" type="Area" parent="."]
collision_layer = 16
collision_mask = 16
script = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Visibility collision"]
transform = Transform( 70, 0, 0, 0, 70, 0, 0, 0, 70, 0, 0, 0 )
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Visibility collision/CollisionShape"]
visible = false
layers = 2
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = null

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3242, 0 )
enabled = true
cast_to = Vector3( 0, -1.3, 0 )

[node name="network_timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[connection signal="timeout" from="Footstep" to="." method="_on_Footstep_timeout"]
[connection signal="area_entered" from="Visibility collision" to="Visibility collision" method="_on_Visibility_collision_area_entered"]
[connection signal="area_exited" from="Visibility collision" to="Visibility collision" method="_on_Visibility_collision_area_exited"]
[connection signal="timeout" from="network_timer" to="." method="_on_network_timer_timeout"]

[editable path="Pivot/Camera/Rocket Launcher"]
[editable path="Pivot/Camera/Rocket Launcher/MeshInstance/Spatial"]
